<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:scrollbars="vertical">

            <TextView
                android:id="@+id/title_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="21sp"
                android:text="@string/lokasi"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/colorBlack"
                app:layout_constraintBottom_toTopOf="@id/image_location"
                tools:ignore="MissingConstraints"/>

            <ImageView
                android:id="@+id/image_location"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/image_location"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_launcher_background"
                app:layout_constraintTop_toBottomOf="@+id/title_location"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintLeft_toRightOf="parent" />

            <TextView
                android:id="@+id/description_location"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/deskripsi"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@+id/image_location"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintLeft_toRightOf="parent" />

            <TextView
                android:id="@+id/lokasi"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lokasi"
                android:textSize="18sp"
                android:textColor="@color/colorBlack"
                app:layout_constraintTop_toBottomOf="@+id/description_location"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintLeft_toRightOf="parent" />

                <com.google.android.gms.maps.MapView
                    android:id="@+id/view_location"
                    android:layout_width="match_parent"
                    android:contentDescription="@string/google_maps"
                    android:background="#ACACAC"
                    android:layout_marginTop="10dp"
                    android:layout_height="200dp"
                    app:layout_constraintTop_toBottomOf="@id/lokasi"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintTop_toBottomOf="@id/view_location">

                <ImageView
                    android:id="@+id/btn_back"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/arrow_back"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:contentDescription="@string/kembali"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentBottom="true"/>
            </RelativeLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>